      invoking a shell when calling man.
    + [CW,NT] Be stricter with missing roff preprocessors by
      setting MANROFFSEQ to the empty string when calling man.
    + [CW,NT] Pass -Tutf8 -Z to man to skip an unused part of
      the groff pipeline.
  * checks/source-copyright{,.desc}:
    + [NT] Check for possible misspellings of known field
      names.  (Closes: #678639)

  * collection/objdump-info{-helper,.desc}:
    + [NT] Change the output format for the collection and
      bump the version of the collection accordingly.

  * data/doc-base/sections:
    + [NT] Update section list.  (Closes: #678650)

  * debian/control:
    + [NT] Add (Build-)Depends on libtext-levenshtein-perl.

  * lib/Lintian/Collect{/Source}.pm:
    + [NT] Add optional parameter to field (and X_field)
      methods that denotes the default value if a field is
      missing.  This avoid some boiler plate for callers
      of the methods.
  * lib/Lintian/Collect/Binary.pm:
    + [NT] Bump API for objdump method.

 -- Niels Thykier <niels@thykier.net>  Tue, 10 Jul 2012 13:21:56 +0200

lintian (2.5.10) unstable; urgency=low

  * Summary of tag changes:
    + Added:
      - incompatible-java-bytecode-format
      - unknown-java-class-version

  * checks/changes-file.desc:
    + [NT] Fix typo in tag description.  Thanks to Luca
      Falavigna for spotting it.
  * checks/files:
    + [NT] Use new gzip decompressor from L::Util.
  * checks/java{,.desc}:
    + [NT] Catch unknown Java class versions.
    + [NT] Catch uses of Java7 byte code as an experimental
      check.  It lacks the proper checks for cases where
      packages have the proper dependencies for Java7 byte
      code.  (Closes: #673276)

  * collection/*:
    + [NT] Add missing load of the FileHandle module.
  * collection/java-info{,.desc}:
    + [NT] Use Archive::Zip instead of zipinfo + unzip to
      extract information from Jar files.
    + [NT] Limit java-info to files classified as "Zip Archive"
      by file(1).