@@ -38,6 +38,7 @@ package Lintian::version_substvars;
 use strict;
 use warnings;
 
+use Lintian::Relation qw(:constants);
 use Lintian::Tags qw(tag);
 
 sub run {
@@ -50,17 +51,31 @@ my $binpkgs = $info->binaries;
 
 my @dep_fields = qw(depends pre-depends recommends suggests conflicts replaces);
 
-foreach (keys %$binpkgs) {
-    my ($pkg1, $pkg1_is_any, $pkg2, $pkg2_is_any, $substvar_strips_binNMU);
+foreach my $pkg1 (sort keys %$binpkgs) {
+    my ($pkg1_is_any, $pkg2, $pkg2_is_any, $substvar_strips_binNMU);
 
-    $pkg1 = $_;
     $pkg1_is_any = ($info->binary_field($pkg1, 'architecture', '') ne 'all');
 
     foreach my $field (@dep_fields) {
-        next unless $info->binary_field($pkg1, $field);
-        if ($info->binary_field($pkg1, $field) =~ m/\${Source-Version}/) {
-            tag 'substvar-source-version-is-deprecated', $pkg1;
-        }
+        next unless $info->binary_field ($pkg1, $field);
+        my $rel = $info->binary_relation ($pkg1, $field);
+        my $svid = 0;
+        my $visitor = sub {
+            if (m/\${Source-Version}/o and not $svid) {
+                $svid++;
+                tag 'substvar-source-version-is-deprecated', $pkg1;
+            }
+            if (m/(\S+)\s*\(\s*[\>\<]?[=\>\<]\s*\${(?:Source-|source:|binary:)Version}/x) {
+                my $other = $1;
+                # We can't test dependencies on packages whose names are
+                # formed via substvars expanded during the build.  Assume
+                # those maintainers know what they're doing.
+                tag 'version-substvar-for-external-package', "$pkg1 -> $other"
+                    unless $info->binary_field ($other, 'architecture') or
+                           $other =~ /\$\{\S+\}/;
+            }
+        };
+        $rel->visit ($visitor, VISIT_PRED_FULL);
     }
 
     foreach (split (m/,/, ($info->binary_field($pkg1, 'pre-depends', '').', '.
@@ -71,12 +86,8 @@ foreach (keys %$binpkgs) {
         $pkg2 = $1;
         $substvar_strips_binNMU = ($3 eq 'source:Version');
 
-        # We can't test dependencies on packages whose names are
-        # formed via substvars expanded during the build.  Assume
-        # those maintainers know what they're doing.
         if (not $info->binary_field($pkg2, 'architecture')) {
-            tag 'version-substvar-for-external-package', "$pkg1 -> $pkg2"
-                unless ($pkg2 =~ /\$\{\S+\}/);
+            # external relation or subst var package - either way, handled above.
             next;
         }
         $pkg2_is_any = ($info->binary_field($pkg2, 'architecture', '') ne 'all');
