@@ -43,10 +43,11 @@ Info: The package is not safely binNMUable because an arch:all package
 Tag: version-substvar-for-external-package
 Severity: important
 Certainty: certain
-Info: The first package has a dependency on the second package that uses
- (= ${binary:Version}), (= ${source:Version}), or (= ${Source-Version}),
- but the second package is not built from this source package.  Usually
- this means there is a mistake in the package name in this dependency.
+Info: The first package has a relation on the second package using a
+ dpkg-control substitution variable to generate the versioned part of
+ the relation.  However the second package is not built from this
+ source package.  Usually this means there is a mistake in the package
+ name in this dependency.
 
 Tag: substvar-source-version-is-deprecated
 Severity: normal
