@@ -3,4 +3,5 @@ E: version-substvars-general source: not-binnmuable-any-depends-all program-bin 
 E: version-substvars-general source: not-binnmuable-any-depends-all program-utils -> program-data
 E: version-substvars-general source: not-binnmuable-any-depends-any program-utils -> program-bin
 E: version-substvars-general source: version-substvar-for-external-package program-data -> foreign-pkg
+E: version-substvars-general source: version-substvar-for-external-package program-data -> other-foreign-pkg
 W: version-substvars-general source: substvar-source-version-is-deprecated program-data
