@@ -28,6 +28,10 @@ lintian (2.5.11) UNRELEASED; urgency=low
   * checks/source-copyright{,.desc}:
     + [NT] Check for possible misspellings of known field
       names.  (Closes: #678639)
+  * checks/version-substvars{,.desc}:
+    + [JW,NT] Extend version-substvar-for-external-package to
+      all relations.  Previously it was only triggered for
+      strong dependnecy relations.  (Closes: #658474)
 
   * collection/objdump-info{-helper,.desc}:
     + [NT] Change the output format for the collection and
